# duckdb-inet-c

./: CMakeLists.txt  Makefile
.github/workflows/: MainDistributionPipeline.yml
old_inet/: ipaddress.cpp
src/: inet_c.cpp  types.cpp
src/include/: types.hpp
test/sql/: test_inet_type.test
